// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PensionsDashboardLayout renders correctly 1`] = `
<div>
  <div
    class="flex flex-col h-screen"
  >
    <header
      data-testid="header"
    >
      <div
        class="t-header print:hidden relative flex items-center bg-blue-800 p-4 shadow-bottom-gray z-10"
      >
        <details
          class="group relative"
        >
          <summary
            class="t-header-menu-open cursor-pointer list-none [&::-webkit-details-marker]:hidden text-center text-white text-sm"
            data-testid="nav-toggle"
            title="Open menu"
          >
            <div>
              <div
                class="group-open:hidden"
              >
                <svgr-mock
                  classname=""
                />
                <span>
                  menu
                </span>
              </div>
              <div
                class="hidden group-open:block"
              >
                <svgr-mock
                  classname=""
                />
                <span>
                  close
                </span>
              </div>
            </div>
          </summary>
          <nav
            class="t-header-navigation flex w-80 md:w-96 pt-4 text-gray-900 absolute z-10"
          >
            <div
              class="border bg-white pb-3 space-y-4 w-full"
            >
              <ul
                class="divide-y"
              >
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Benefits
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Everyday money
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Family & care
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Homes
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Money troubles
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Pensions & retirement
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Savings
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Work
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
              </ul>
              <div
                class="t-header-navigation-button px-3"
              >
                <a
                  class="border border-pink-600 text-pink-600 bg-white hover:border-pink-800 hover:text-pink-800 hover:shadow-none focus:border-transparent active:text-slate-900 active:outline-purple-700 active:bg-white active:border-transparent t-button px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-500 disabled:shadow-none focus:bg-yellow-200 focus:outline-purple-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none active:shadow-none active:outline-[3px] active:outline-offset-0"
                  href="/"
                >
                  Cymraeg
                </a>
              </div>
            </div>
          </nav>
        </details>
        <div
          class="t-header-logo mx-auto"
        >
          <a
            aria-label="Money helper"
            href="/"
          >
            <span
              class="hidden md:inline"
            >
              <svgr-mock
                classname=""
              />
            </span>
            <span
              class="md:hidden"
            >
              <svgr-mock
                classname=""
              />
            </span>
          </a>
        </div>
        <details
          class="group"
        >
          <summary
            class="t-header-search-open cursor-pointer list-none [&::-webkit-details-marker]:hidden bg-pink-600 text-white rounded p-1 flex"
            data-testid="search-toggle"
            title="Open search"
          >
            <svgr-mock
              classname="group-open:hidden"
            />
            <svgr-mock
              classname="hidden group-open:block"
            />
          </summary>
          <form
            action="/"
            class="t-header-search-form flex absolute px-4 pb-6 left-0 right-0 top-full bg-blue-800 shadow-bottom-gray"
            method="get"
          >
            <label
              class="sr-only"
              for="q"
            >
              Search MoneyHelper
            </label>
            <input
              class="rounded-l p-2 w-full"
              id="q"
              name="q"
              placeholder="How can we help you today?"
              required=""
              type="text"
            />
            <button
              class="bg-pink-600 text-white rounded-r p-1"
              title="Search MoneyHelper"
            >
              <svgr-mock
                classname=""
              />
            </button>
          </form>
        </details>
      </div>
    </header>
    <div
      class="container-auto mt-16"
    >
      <h1
        class="text-4xl md:text-5xl font-bold mb-6 text-blue-800"
      >
        test title
      </h1>
    </div>
    <main
      class="flex-grow mb-16"
    >
      <div
        class="container-auto text-base"
      >
        test content
      </div>
    </main>
    <footer
      class="t-footer mt-8 border-t border-gray-100"
      data-testid="footer"
    >
      <div
        class="t-footer-primary"
      >
        <div
          class="lg:hidden pt-4 space-y-8"
        >
          <div
            class="container-auto"
          >
            <div
              class="t-footer-branding space-y-4 md:space-y-0 md:flex md:space-x-4"
            >
              <div
                class="t-footer-gov"
              >
                <img
                  alt="H.M. Government logo"
                  data-nimg="1"
                  decoding="async"
                  height="74"
                  loading="lazy"
                  src="/_next/image?url=%2Ffooter%2Fgov.png&w=640&q=75"
                  srcset="/_next/image?url=%2Ffooter%2Fgov.png&w=256&q=75 1x, /_next/image?url=%2Ffooter%2Fgov.png&w=640&q=75 2x"
                  style="color: transparent;"
                  width="220"
                />
              </div>
              <hr
                class=""
              />
              <div>
                <div
                  class="t-footer-maps flex-grow space-y-4 text-sm"
                >
                  <div>
                    MoneyHelper is provided by:
                  </div>
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <img
                      alt="MaPS logo"
                      data-nimg="1"
                      decoding="async"
                      height="60"
                      loading="lazy"
                      src="/_next/image?url=%2Fmaps-logo.png&w=384&q=75"
                      srcset="/_next/image?url=%2Fmaps-logo.png&w=256&q=75 1x, /_next/image?url=%2Fmaps-logo.png&w=384&q=75 2x"
                      style="color: transparent;"
                      width="164"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-footer-accessibility bg-gray-100"
          >
            <div
              class="container-auto"
            >
              <div
                class="py-8 md:flex md:items-end space-y-8 md:gap-8"
              >
                <div
                  class="flex items-end gap-4"
                >
                  <a
                    aria-label="W3C WAI-AA WCAG 2.1"
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="p-0.5"
                    >
                      <svgr-mock
                        classname=""
                      />
                    </div>
                  </a>
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <img
                      alt="Plain language commission logo"
                      class="p-0.5"
                      data-nimg="1"
                      decoding="async"
                      height="87"
                      loading="lazy"
                      src="/_next/image?url=%2Fplain-language-commission.jpg&w=256&q=75"
                      srcset="/_next/image?url=%2Fplain-language-commission.jpg&w=96&q=75 1x, /_next/image?url=%2Fplain-language-commission.jpg&w=256&q=75 2x"
                      style="color: transparent;"
                      width="68"
                    />
                  </a>
                </div>
                <a
                  class="space-x-2 inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                  href="/"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <svgr-mock
                      classname=""
                    />
                    <div>
                      Report an accessibility problem
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="hidden lg:block"
        >
          <div
            class="container-auto"
          >
            <div
              class="grid grid-cols-2"
            >
              <div
                class="t-footer-branding grid grid-cols-2 py-8"
              >
                <div
                  class="t-footer-gov"
                >
                  <img
                    alt="H.M. Government logo"
                    data-nimg="1"
                    decoding="async"
                    height="74"
                    loading="lazy"
                    src="/_next/image?url=%2Ffooter%2Fgov.png&w=640&q=75"
                    srcset="/_next/image?url=%2Ffooter%2Fgov.png&w=256&q=75 1x, /_next/image?url=%2Ffooter%2Fgov.png&w=640&q=75 2x"
                    style="color: transparent;"
                    width="220"
                  />
                </div>
                <div
                  class="t-footer-maps space-y-4 text-md"
                >
                  <div>
                    MoneyHelper is provided by:
                  </div>
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <img
                      alt="MaPS logo"
                      data-nimg="1"
                      decoding="async"
                      height="60"
                      loading="lazy"
                      src="/_next/image?url=%2Fmaps-logo.png&w=384&q=75"
                      srcset="/_next/image?url=%2Fmaps-logo.png&w=256&q=75 1x, /_next/image?url=%2Fmaps-logo.png&w=384&q=75 2x"
                      style="color: transparent;"
                      width="164"
                    />
                  </a>
                </div>
              </div>
              <div
                class="t-footer-accessibility bg-gray-100 flex pl-4"
              >
                <div
                  class="flex-grow"
                />
                <div
                  class="py-8 flex items-end space-y-8 gap-8"
                >
                  <div
                    class="flex items-end gap-4"
                  >
                    <a
                      aria-label="W3C WAI-AA WCAG 2.1"
                      class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                      href="/"
                    >
                      <div
                        class="p-0.5"
                      >
                        <svgr-mock
                          classname=""
                        />
                      </div>
                    </a>
                    <a
                      class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                      href="/"
                    >
                      <img
                        alt="Plain language commission logo"
                        class="p-0.5"
                        data-nimg="1"
                        decoding="async"
                        height="87"
                        loading="lazy"
                        src="/_next/image?url=%2Fplain-language-commission.jpg&w=256&q=75"
                        srcset="/_next/image?url=%2Fplain-language-commission.jpg&w=96&q=75 1x, /_next/image?url=%2Fplain-language-commission.jpg&w=256&q=75 2x"
                        style="color: transparent;"
                        width="68"
                      />
                    </a>
                  </div>
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <svgr-mock
                        classname=""
                      />
                      <div>
                        Report an accessibility problem
                      </div>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-footer-secondary pt-6 pb-24 md:pb-6 bg-gray-800"
      >
        <div
          class="container-auto"
        >
          <div
            class="space-y-3"
          >
            <div
              class="t-footer-copy text-white text-sm"
            >
              © 2024 Money and Pensions Service, 120 Holborn, London EC1N 2TD. All rights reserved.
            </div>
            <div>
              <ul
                class="divide-x divide-gray-400"
              >
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    About us
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Terms & conditions
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Privacy notice
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Accessibility
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Cookies
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Report a problem
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Contact us
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`PensionsDashboardLayout renders with the breadcrumb 1`] = `
<div>
  <div
    class="flex flex-col h-screen"
  >
    <header
      data-testid="header"
    >
      <div
        class="t-header print:hidden relative flex items-center bg-blue-800 p-4 shadow-bottom-gray z-10"
      >
        <details
          class="group relative"
        >
          <summary
            class="t-header-menu-open cursor-pointer list-none [&::-webkit-details-marker]:hidden text-center text-white text-sm"
            data-testid="nav-toggle"
            title="Open menu"
          >
            <div>
              <div
                class="group-open:hidden"
              >
                <svgr-mock
                  classname=""
                />
                <span>
                  menu
                </span>
              </div>
              <div
                class="hidden group-open:block"
              >
                <svgr-mock
                  classname=""
                />
                <span>
                  close
                </span>
              </div>
            </div>
          </summary>
          <nav
            class="t-header-navigation flex w-80 md:w-96 pt-4 text-gray-900 absolute z-10"
          >
            <div
              class="border bg-white pb-3 space-y-4 w-full"
            >
              <ul
                class="divide-y"
              >
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Benefits
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Everyday money
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Family & care
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Homes
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Money troubles
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Pensions & retirement
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Savings
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Work
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
              </ul>
              <div
                class="t-header-navigation-button px-3"
              >
                <a
                  class="border border-pink-600 text-pink-600 bg-white hover:border-pink-800 hover:text-pink-800 hover:shadow-none focus:border-transparent active:text-slate-900 active:outline-purple-700 active:bg-white active:border-transparent t-button px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-500 disabled:shadow-none focus:bg-yellow-200 focus:outline-purple-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none active:shadow-none active:outline-[3px] active:outline-offset-0"
                  href="/"
                >
                  Cymraeg
                </a>
              </div>
            </div>
          </nav>
        </details>
        <div
          class="t-header-logo mx-auto"
        >
          <a
            aria-label="Money helper"
            href="/"
          >
            <span
              class="hidden md:inline"
            >
              <svgr-mock
                classname=""
              />
            </span>
            <span
              class="md:hidden"
            >
              <svgr-mock
                classname=""
              />
            </span>
          </a>
        </div>
        <details
          class="group"
        >
          <summary
            class="t-header-search-open cursor-pointer list-none [&::-webkit-details-marker]:hidden bg-pink-600 text-white rounded p-1 flex"
            data-testid="search-toggle"
            title="Open search"
          >
            <svgr-mock
              classname="group-open:hidden"
            />
            <svgr-mock
              classname="hidden group-open:block"
            />
          </summary>
          <form
            action="/"
            class="t-header-search-form flex absolute px-4 pb-6 left-0 right-0 top-full bg-blue-800 shadow-bottom-gray"
            method="get"
          >
            <label
              class="sr-only"
              for="q"
            >
              Search MoneyHelper
            </label>
            <input
              class="rounded-l p-2 w-full"
              id="q"
              name="q"
              placeholder="How can we help you today?"
              required=""
              type="text"
            />
            <button
              class="bg-pink-600 text-white rounded-r p-1"
              title="Search MoneyHelper"
            >
              <svgr-mock
                classname=""
              />
            </button>
          </form>
        </details>
      </div>
    </header>
    <div
      class="container-auto mt-16"
    >
      <div
        class="ml-[-1rem]"
      >
        <a
          class="print:hidden md:hidden outline-none t-breadcrumb-mobile pl-2.5 flex items-center py-1 relative z-1 border-1 border-white shadow-box-link hover:border-1 hover:border-pink-800 focus:bg-yellow-200 focus:shadow-box-link-focus focus:border-2 focus:border-purple-700 focus:border-opacity-100"
          data-testid="breadcrumb-mobile"
          href="/test-breadcrumb"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            viewBox="0 0 8 14"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 14L8 12L4.1 8.1C3.5 7.5 3.5 6.6 4.1 6L8 2L6 -8.74228e-08L1.8 4.2C0.200001 5.8 0.200001 8.3 1.8 9.9L6 14Z"
              fill="#C82A87"
            />
          </svg>
          <div
            class="pl-2"
          >
            <p
              class="text-pink-600 text-base font-semibold hover:text-pink-900 focus:text-gray-800"
            >
              test breadcrumb
            </p>
          </div>
        </a>
        <nav
          aria-label="breadcrumbs"
          class="hidden md:block"
          data-testid="breadcrumb-desktop"
        >
          <ul
            class="t-breadcrumb-desktop flex px-4 py-4"
          >
            <li
              class="flex items-center pr-2"
            >
              <a
                class="text-pink-600 text-sm font-bold hover:underline hover:text-pink-900 focus:bg-yellow-200 focus:shadow-link-focus outline-none"
                href="/test-breadcrumb"
              >
                test breadcrumb
              </a>
            </li>
          </ul>
        </nav>
      </div>
      <h1
        class="text-4xl md:text-5xl font-bold mb-6 text-blue-800 mt-8"
      >
        test title
      </h1>
    </div>
    <main
      class="flex-grow mb-16"
    >
      <div
        class="container-auto text-base"
      >
        test content
      </div>
    </main>
    <footer
      class="t-footer mt-8 border-t border-gray-100"
      data-testid="footer"
    >
      <div
        class="t-footer-primary"
      >
        <div
          class="lg:hidden pt-4 space-y-8"
        >
          <div
            class="container-auto"
          >
            <div
              class="t-footer-branding space-y-4 md:space-y-0 md:flex md:space-x-4"
            >
              <div
                class="t-footer-gov"
              >
                <img
                  alt="H.M. Government logo"
                  data-nimg="1"
                  decoding="async"
                  height="74"
                  loading="lazy"
                  src="/_next/image?url=%2Ffooter%2Fgov.png&w=640&q=75"
                  srcset="/_next/image?url=%2Ffooter%2Fgov.png&w=256&q=75 1x, /_next/image?url=%2Ffooter%2Fgov.png&w=640&q=75 2x"
                  style="color: transparent;"
                  width="220"
                />
              </div>
              <hr
                class=""
              />
              <div>
                <div
                  class="t-footer-maps flex-grow space-y-4 text-sm"
                >
                  <div>
                    MoneyHelper is provided by:
                  </div>
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <img
                      alt="MaPS logo"
                      data-nimg="1"
                      decoding="async"
                      height="60"
                      loading="lazy"
                      src="/_next/image?url=%2Fmaps-logo.png&w=384&q=75"
                      srcset="/_next/image?url=%2Fmaps-logo.png&w=256&q=75 1x, /_next/image?url=%2Fmaps-logo.png&w=384&q=75 2x"
                      style="color: transparent;"
                      width="164"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-footer-accessibility bg-gray-100"
          >
            <div
              class="container-auto"
            >
              <div
                class="py-8 md:flex md:items-end space-y-8 md:gap-8"
              >
                <div
                  class="flex items-end gap-4"
                >
                  <a
                    aria-label="W3C WAI-AA WCAG 2.1"
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="p-0.5"
                    >
                      <svgr-mock
                        classname=""
                      />
                    </div>
                  </a>
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <img
                      alt="Plain language commission logo"
                      class="p-0.5"
                      data-nimg="1"
                      decoding="async"
                      height="87"
                      loading="lazy"
                      src="/_next/image?url=%2Fplain-language-commission.jpg&w=256&q=75"
                      srcset="/_next/image?url=%2Fplain-language-commission.jpg&w=96&q=75 1x, /_next/image?url=%2Fplain-language-commission.jpg&w=256&q=75 2x"
                      style="color: transparent;"
                      width="68"
                    />
                  </a>
                </div>
                <a
                  class="space-x-2 inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                  href="/"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <svgr-mock
                      classname=""
                    />
                    <div>
                      Report an accessibility problem
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="hidden lg:block"
        >
          <div
            class="container-auto"
          >
            <div
              class="grid grid-cols-2"
            >
              <div
                class="t-footer-branding grid grid-cols-2 py-8"
              >
                <div
                  class="t-footer-gov"
                >
                  <img
                    alt="H.M. Government logo"
                    data-nimg="1"
                    decoding="async"
                    height="74"
                    loading="lazy"
                    src="/_next/image?url=%2Ffooter%2Fgov.png&w=640&q=75"
                    srcset="/_next/image?url=%2Ffooter%2Fgov.png&w=256&q=75 1x, /_next/image?url=%2Ffooter%2Fgov.png&w=640&q=75 2x"
                    style="color: transparent;"
                    width="220"
                  />
                </div>
                <div
                  class="t-footer-maps space-y-4 text-md"
                >
                  <div>
                    MoneyHelper is provided by:
                  </div>
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <img
                      alt="MaPS logo"
                      data-nimg="1"
                      decoding="async"
                      height="60"
                      loading="lazy"
                      src="/_next/image?url=%2Fmaps-logo.png&w=384&q=75"
                      srcset="/_next/image?url=%2Fmaps-logo.png&w=256&q=75 1x, /_next/image?url=%2Fmaps-logo.png&w=384&q=75 2x"
                      style="color: transparent;"
                      width="164"
                    />
                  </a>
                </div>
              </div>
              <div
                class="t-footer-accessibility bg-gray-100 flex pl-4"
              >
                <div
                  class="flex-grow"
                />
                <div
                  class="py-8 flex items-end space-y-8 gap-8"
                >
                  <div
                    class="flex items-end gap-4"
                  >
                    <a
                      aria-label="W3C WAI-AA WCAG 2.1"
                      class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                      href="/"
                    >
                      <div
                        class="p-0.5"
                      >
                        <svgr-mock
                          classname=""
                        />
                      </div>
                    </a>
                    <a
                      class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                      href="/"
                    >
                      <img
                        alt="Plain language commission logo"
                        class="p-0.5"
                        data-nimg="1"
                        decoding="async"
                        height="87"
                        loading="lazy"
                        src="/_next/image?url=%2Fplain-language-commission.jpg&w=256&q=75"
                        srcset="/_next/image?url=%2Fplain-language-commission.jpg&w=96&q=75 1x, /_next/image?url=%2Fplain-language-commission.jpg&w=256&q=75 2x"
                        style="color: transparent;"
                        width="68"
                      />
                    </a>
                  </div>
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <svgr-mock
                        classname=""
                      />
                      <div>
                        Report an accessibility problem
                      </div>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-footer-secondary pt-6 pb-24 md:pb-6 bg-gray-800"
      >
        <div
          class="container-auto"
        >
          <div
            class="space-y-3"
          >
            <div
              class="t-footer-copy text-white text-sm"
            >
              © 2024 Money and Pensions Service, 120 Holborn, London EC1N 2TD. All rights reserved.
            </div>
            <div>
              <ul
                class="divide-x divide-gray-400"
              >
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    About us
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Terms & conditions
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Privacy notice
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Accessibility
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Cookies
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Report a problem
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Contact us
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`PensionsDashboardLayout renders with the common links 1`] = `
<div>
  <div
    class="flex flex-col h-screen"
  >
    <header
      data-testid="header"
    >
      <div
        class="t-header print:hidden relative flex items-center bg-blue-800 p-4 shadow-bottom-gray z-10"
      >
        <details
          class="group relative"
        >
          <summary
            class="t-header-menu-open cursor-pointer list-none [&::-webkit-details-marker]:hidden text-center text-white text-sm"
            data-testid="nav-toggle"
            title="Open menu"
          >
            <div>
              <div
                class="group-open:hidden"
              >
                <svgr-mock
                  classname=""
                />
                <span>
                  menu
                </span>
              </div>
              <div
                class="hidden group-open:block"
              >
                <svgr-mock
                  classname=""
                />
                <span>
                  close
                </span>
              </div>
            </div>
          </summary>
          <nav
            class="t-header-navigation flex w-80 md:w-96 pt-4 text-gray-900 absolute z-10"
          >
            <div
              class="border bg-white pb-3 space-y-4 w-full"
            >
              <ul
                class="divide-y"
              >
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Benefits
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Everyday money
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Family & care
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Homes
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Money troubles
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Pensions & retirement
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Savings
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
                <li
                  class="px-3 py-2"
                >
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div>
                        Work
                      </div>
                      <svg
                        aria-hidden="true"
                        height="32"
                        viewBox="0 0 24 24"
                        width="32"
                      >
                        <path
                          d="M8.59 16.58L13.17 12L8.59 7.41L10 6l6 6l-6 6l-1.41-1.42Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </a>
                </li>
              </ul>
              <div
                class="t-header-navigation-button px-3"
              >
                <a
                  class="border border-pink-600 text-pink-600 bg-white hover:border-pink-800 hover:text-pink-800 hover:shadow-none focus:border-transparent active:text-slate-900 active:outline-purple-700 active:bg-white active:border-transparent t-button px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-500 disabled:shadow-none focus:bg-yellow-200 focus:outline-purple-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none active:shadow-none active:outline-[3px] active:outline-offset-0"
                  href="/"
                >
                  Cymraeg
                </a>
              </div>
            </div>
          </nav>
        </details>
        <div
          class="t-header-logo mx-auto"
        >
          <a
            aria-label="Money helper"
            href="/"
          >
            <span
              class="hidden md:inline"
            >
              <svgr-mock
                classname=""
              />
            </span>
            <span
              class="md:hidden"
            >
              <svgr-mock
                classname=""
              />
            </span>
          </a>
        </div>
        <details
          class="group"
        >
          <summary
            class="t-header-search-open cursor-pointer list-none [&::-webkit-details-marker]:hidden bg-pink-600 text-white rounded p-1 flex"
            data-testid="search-toggle"
            title="Open search"
          >
            <svgr-mock
              classname="group-open:hidden"
            />
            <svgr-mock
              classname="hidden group-open:block"
            />
          </summary>
          <form
            action="/"
            class="t-header-search-form flex absolute px-4 pb-6 left-0 right-0 top-full bg-blue-800 shadow-bottom-gray"
            method="get"
          >
            <label
              class="sr-only"
              for="q"
            >
              Search MoneyHelper
            </label>
            <input
              class="rounded-l p-2 w-full"
              id="q"
              name="q"
              placeholder="How can we help you today?"
              required=""
              type="text"
            />
            <button
              class="bg-pink-600 text-white rounded-r p-1"
              title="Search MoneyHelper"
            >
              <svgr-mock
                classname=""
              />
            </button>
          </form>
        </details>
      </div>
    </header>
    <div
      class="container-auto mt-16"
    >
      <h1
        class="text-4xl md:text-5xl font-bold mb-6 text-blue-800"
      >
        test title
      </h1>
    </div>
    <main
      class="flex-grow mb-16"
    >
      <div
        class="container-auto text-base"
      >
        test content
      </div>
    </main>
    <div
      class="border-t-1 py-16"
    >
      <div
        class="container-auto"
      >
        <h2
          class="text-3xl md:text-4xl text-gray-800 font-bold mb-4"
        >
          Manage your information
        </h2>
        <ul
          class="[&>*:last-child]:border-b-1"
        >
          <li
            class="py-2 border-t-1 border-slate-400"
          >
            <a
              class="text-base inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
              href="/en/manage-consent"
            >
              Manage consent
            </a>
          </li>
          <li
            class="py-2 border-t-1 border-slate-400"
          >
            <a
              class="text-base inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
              href="/en/manage-consent"
            >
              Delegate access to a financial adviser
            </a>
          </li>
          <li
            class="py-2 border-t-1 border-slate-400"
          >
            <a
              class="text-base inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
              href="/en/complaints"
            >
              Make a complaint
            </a>
          </li>
          <li
            class="py-2 border-t-1 border-slate-400"
          >
            <a
              class="text-base inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
              href="/en/download-data"
            >
              <svgr-mock
                classname=""
              />
              Download my pension information (.pdf)
            </a>
          </li>
        </ul>
      </div>
    </div>
    <footer
      class="t-footer mt-8 border-t border-gray-100"
      data-testid="footer"
    >
      <div
        class="t-footer-primary"
      >
        <div
          class="lg:hidden pt-4 space-y-8"
        >
          <div
            class="container-auto"
          >
            <div
              class="t-footer-branding space-y-4 md:space-y-0 md:flex md:space-x-4"
            >
              <div
                class="t-footer-gov"
              >
                <img
                  alt="H.M. Government logo"
                  data-nimg="1"
                  decoding="async"
                  height="74"
                  loading="lazy"
                  src="/_next/image?url=%2Ffooter%2Fgov.png&w=640&q=75"
                  srcset="/_next/image?url=%2Ffooter%2Fgov.png&w=256&q=75 1x, /_next/image?url=%2Ffooter%2Fgov.png&w=640&q=75 2x"
                  style="color: transparent;"
                  width="220"
                />
              </div>
              <hr
                class=""
              />
              <div>
                <div
                  class="t-footer-maps flex-grow space-y-4 text-sm"
                >
                  <div>
                    MoneyHelper is provided by:
                  </div>
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <img
                      alt="MaPS logo"
                      data-nimg="1"
                      decoding="async"
                      height="60"
                      loading="lazy"
                      src="/_next/image?url=%2Fmaps-logo.png&w=384&q=75"
                      srcset="/_next/image?url=%2Fmaps-logo.png&w=256&q=75 1x, /_next/image?url=%2Fmaps-logo.png&w=384&q=75 2x"
                      style="color: transparent;"
                      width="164"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="t-footer-accessibility bg-gray-100"
          >
            <div
              class="container-auto"
            >
              <div
                class="py-8 md:flex md:items-end space-y-8 md:gap-8"
              >
                <div
                  class="flex items-end gap-4"
                >
                  <a
                    aria-label="W3C WAI-AA WCAG 2.1"
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="p-0.5"
                    >
                      <svgr-mock
                        classname=""
                      />
                    </div>
                  </a>
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <img
                      alt="Plain language commission logo"
                      class="p-0.5"
                      data-nimg="1"
                      decoding="async"
                      height="87"
                      loading="lazy"
                      src="/_next/image?url=%2Fplain-language-commission.jpg&w=256&q=75"
                      srcset="/_next/image?url=%2Fplain-language-commission.jpg&w=96&q=75 1x, /_next/image?url=%2Fplain-language-commission.jpg&w=256&q=75 2x"
                      style="color: transparent;"
                      width="68"
                    />
                  </a>
                </div>
                <a
                  class="space-x-2 inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                  href="/"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <svgr-mock
                      classname=""
                    />
                    <div>
                      Report an accessibility problem
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="hidden lg:block"
        >
          <div
            class="container-auto"
          >
            <div
              class="grid grid-cols-2"
            >
              <div
                class="t-footer-branding grid grid-cols-2 py-8"
              >
                <div
                  class="t-footer-gov"
                >
                  <img
                    alt="H.M. Government logo"
                    data-nimg="1"
                    decoding="async"
                    height="74"
                    loading="lazy"
                    src="/_next/image?url=%2Ffooter%2Fgov.png&w=640&q=75"
                    srcset="/_next/image?url=%2Ffooter%2Fgov.png&w=256&q=75 1x, /_next/image?url=%2Ffooter%2Fgov.png&w=640&q=75 2x"
                    style="color: transparent;"
                    width="220"
                  />
                </div>
                <div
                  class="t-footer-maps space-y-4 text-md"
                >
                  <div>
                    MoneyHelper is provided by:
                  </div>
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <img
                      alt="MaPS logo"
                      data-nimg="1"
                      decoding="async"
                      height="60"
                      loading="lazy"
                      src="/_next/image?url=%2Fmaps-logo.png&w=384&q=75"
                      srcset="/_next/image?url=%2Fmaps-logo.png&w=256&q=75 1x, /_next/image?url=%2Fmaps-logo.png&w=384&q=75 2x"
                      style="color: transparent;"
                      width="164"
                    />
                  </a>
                </div>
              </div>
              <div
                class="t-footer-accessibility bg-gray-100 flex pl-4"
              >
                <div
                  class="flex-grow"
                />
                <div
                  class="py-8 flex items-end space-y-8 gap-8"
                >
                  <div
                    class="flex items-end gap-4"
                  >
                    <a
                      aria-label="W3C WAI-AA WCAG 2.1"
                      class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                      href="/"
                    >
                      <div
                        class="p-0.5"
                      >
                        <svgr-mock
                          classname=""
                        />
                      </div>
                    </a>
                    <a
                      class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                      href="/"
                    >
                      <img
                        alt="Plain language commission logo"
                        class="p-0.5"
                        data-nimg="1"
                        decoding="async"
                        height="87"
                        loading="lazy"
                        src="/_next/image?url=%2Fplain-language-commission.jpg&w=256&q=75"
                        srcset="/_next/image?url=%2Fplain-language-commission.jpg&w=96&q=75 1x, /_next/image?url=%2Fplain-language-commission.jpg&w=256&q=75 2x"
                        style="color: transparent;"
                        width="68"
                      />
                    </a>
                  </div>
                  <a
                    class="inline-flex items-center gap-2 text-pink-600 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <svgr-mock
                        classname=""
                      />
                      <div>
                        Report an accessibility problem
                      </div>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-footer-secondary pt-6 pb-24 md:pb-6 bg-gray-800"
      >
        <div
          class="container-auto"
        >
          <div
            class="space-y-3"
          >
            <div
              class="t-footer-copy text-white text-sm"
            >
              © 2024 Money and Pensions Service, 120 Holborn, London EC1N 2TD. All rights reserved.
            </div>
            <div>
              <ul
                class="divide-x divide-gray-400"
              >
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    About us
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Terms & conditions
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Privacy notice
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Accessibility
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Cookies
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Report a problem
                  </a>
                </li>
                <li
                  class="inline pl-2 first:pl-0 pr-2 text-white text-sm"
                >
                  <a
                    class="inline-flex items-center gap-2 text-white no-underline hover:text-pink-400 visited:text-white focus:text-gray-800 focus:bg-yellow-200 focus:shadow-link-focus focus-within:outline-0 hover:underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none"
                    href="/"
                  >
                    Contact us
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </footer>
  </div>
</div>
`;
